test/data/invalid_models/include_without_uri/model.sdf
<?xml version="1.0" ?>
<sdf version="1.5">
    <model name="simple test model">
        <include>
        </include>
    </model>
</sdf>
